--- a/index.html
+++ b/index.html
@@ -3176,18 +3176,19 @@
             <div class="swiper-slide">
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
-                  <h3>Ahmad Deeb</h3>
-                  <h4>Civil Engineer</h4>
-                  
+                  <h3>Ahmed Issa Alwan</h3>
+                  <h4>Electronics and Communications Engineer</h4>
+                  <p>I love continuous learning, especially self-learning. I have a great interest in programming and developing integrated boards, in addition to my love for the world of networks and communications</p>
                 </div>
               </div>
             </div><!-- End testimonial item -->
-
+            
             <div class="swiper-slide">
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
-                  <h3>Ahmad Deeb</h3>
-                  <h4>Civil Engineer</h4>
+                  <h3>Ahmad Akram Aljerf</h3>
+                  <h4>Telecommunications Engineer</h4>
+                  <p>I  a telecommunications engineer with experience in analyzing communication systems. I possess strong skills in preparing documentation and performance reports, and have a solid understanding of transport protocols and various types of telecommunications equipment. I am passionate about learning and development, and I enjoy collaborative and creative work.</p>
                 </div>
               </div>
             </div><!-- End testimonial item -->
