--- a/index.html
+++ b/index.html
@@ -3168,7 +3168,7 @@
                 <div class="testimonial-item">
                   <h3>Ahmad Deeb</h3>
                   <h4>Civil Engineer</h4>
-                  <p>Civil Engineer from Damascus University, pattiented about Networks, Programming and Security.</p>
+                  <p>Civil Engineer from Damascus University, passioned about Networks, Programming and Security.</p>
                 </div>
               </div>
             </div><!-- End testimonial item -->
@@ -3182,7 +3182,7 @@
                 </div>
               </div>
             </div><!-- End testimonial item -->
-            
+
             <div class="swiper-slide">
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
